Set 2 upload (initial and non functional)

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ Problemset*/Exercise*/*.dat
 Problemset1/Exercise1/plots/
 Problemset1/Exercise1/opt*
 Problemset1/Exercise1/non*
+
+#Preliminary Problemset2
+#Problemset2/
