--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ Problemset*/Exercise*/bin/
 Problemset*/Exercise*/Debug/
 Problemset*/Exercise*/obj/
 Problemset*/Exercise*/*.out
+Problemset*/obj
+Problemset*/bin
 
 #Data for Set1/Exercise1
 Problemset*/Exercise*/*.dat
