Basic, preliminary implementation of CelBody, corrections to the UML classdiagram, updates to .gitignore Doxyfile created Creation of class Star (inherited from CelBody) Inclusion of eclipse-projectfiles

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Documentation
 Problemset1/Exercise2/doc/
+Problemset*/doc
 
 # Backupfiles
 *.*~
@@ -8,7 +9,7 @@ Problemset*/Exercise*/*.*~
 #eclipse-files
 .metadata/
 RemoteSystemsTempFiles/
-Problemset*/.*
+Problemset*/.settings/
 
 #Binaries
 Problemset*/Exercise*/bin/
@@ -39,3 +40,4 @@ Problemset2/solution
 
 #UML
 Problemset*/UML/*.html
+
