Added measurement and plotting to makefile, Added energyupdate to PhysSim update-method, Adjusted update-stepsize, Wrote plotscript

--- a/Problemset3/Makefile
+++ b/Problemset3/Makefile
@@ -14,4 +14,10 @@ all: $(OBJ)
 	$(CC) $(CFLAGS) -c $<
 
 clean:
-	rm *.out  
+	rm *.out
+
+data:
+	./simul.out > plots/planet.dat
+
+plot:
+	gnuplot plots/plot.plt  
