Added preprocessor check, if usage of the GNU scientific library is wanted on compilation, Edited Makefile accordingly, edited gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ Problemset*/obj
 Problemset*/bin
 Problemset*/Debug
 Problemset*/Release
+Problemset*/*.out
 
 #Data for Set1/Exercise1
 Problemset*/Exercise*/*.dat
