Rejected use of regular expressions, used stringstream instead, edited Makefile, more minor changes

--- a/Problemset5/Makefile
+++ b/Problemset5/Makefile
@@ -8,4 +8,6 @@ prog: $(OBJ)
 	$(CC) $(OBJ) -o run.out $(LDFLAGS)
 	rm *.o
 %.o: %.cpp
-	$(CC) $(CFLAGS) -c $< 
+	$(CC) $(CFLAGS) -c $<
+clean:
+	rm *.out 
